fixed noise fx overflow

--- a/src/components/OurTeachers/teachers.scss
+++ b/src/components/OurTeachers/teachers.scss
@@ -26,7 +26,7 @@ ul li {
   .teachers-list {
     margin-top: 10rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
     color: white;
     .teacher-card {
       display: flex;
